# swagger_server/controllers/user_controller.py
@@ -255,3 +255,30 @@ class UserView(MethodView):
             response, status_code = CustomAPIException.check_exception(ex, function_name, internal_process)
             
         return response, status_code
+
+    def get_roles(self):
+        internal_process = (None, None)
+        function_name = "get_roles"
+        response = {}
+        status_code = 500
+        try:
+            start_time = default_timer()
+            internal_transaction_id = str(generate_internal_transaction_id())
+            external_transaction_id = request.headers.get('externalTransactionId')
+            internal_process = (internal_transaction_id, external_transaction_id)
+            response["internal_transaction_id"] = internal_transaction_id
+            response["external_transaction_id"] = external_transaction_id
+
+            message = f"start request: {function_name}, channel: {request.headers.get('channel')}"
+            logger.info(message, internal=internal_transaction_id, external=external_transaction_id)
+            response["data"] = self.user_use_case.get_roles(internal_transaction_id, external_transaction_id)
+            response["error_code"] = 0
+            response["message"] = "Roles obtenidos correctamente"
+            end_time = default_timer()
+            logger.info(f"Fin de la transacción, procesada en : {end_time - start_time} milisegundos",
+                        internal=internal_transaction_id, external=external_transaction_id)
+            status_code = 200
+        except Exception as ex:
+            response, status_code = CustomAPIException.check_exception(ex, function_name, internal_process)
+            
+        return response, status_code
